--- a/grab-market/index.css
+++ b/grab-market/index.css
@@ -10,7 +10,7 @@
 }
 #body {
   width: 1024px;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   padding-bottom: 24px;
 }
@@ -48,6 +48,27 @@
 .product-card {
   width: 180px;
   height: 300px;
-  background-color: crimson;
   margin: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
+  overflow: hidden;
+}
+.product-img {
+  width: 100%;
+  height: 200px;
+}
+.product-contents {
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+}
+.proudct-name {
+  font-size: 13px;
+}
+.product-price {
+  font-size: 16px;
+  font-weight: 600;
+}
+.product-seller {
+  display: flex;
 }
