--- a/grab-market/index.css
+++ b/grab-market/index.css
@@ -68,7 +68,13 @@
 .product-price {
   font-size: 16px;
   font-weight: 600;
+  margin-top: 4px;
 }
 .product-seller {
   display: flex;
+  align-items: center;
+  margin-top: 12px;
+}
+.product-avatar {
+  width: 24px;
 }
